fix alignments of card image

--- a/css/cards.css
+++ b/css/cards.css
@@ -26,7 +26,8 @@
 .card-large-img {
 	display: block;
 	width: auto;
-	max-height: calc(100% - 50px - 80px);
+	padding-top: 8px;
+	max-height: calc(100% - 40px - 40px);
 	object-fit: cover;
 	margin: auto;
 }
